--- a/source/template/pages/index.pug
+++ b/source/template/pages/index.pug
@@ -6,3 +6,4 @@ block variables
 block content
     include ../../blocks/cards/cards.pug
     include ../../blocks/DOM/DOM.pug
+    include ../../blocks/achiv/achiv.pug
